# xtask

./: .gitignore  AGENTS.md  Cargo.toml  README.md  VISION.md  architecture-spec.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml  v1-spec.md
.beads/: config.yaml  interactions.jsonl  metadata.json
.beads/schemas/: titania-20260630054337-77bp1cb3.cue  titania-20260630054337-e23uwksz.cue  titania-20260630054337-htq8mfio.cue  titania-20260630054337-jseuxd6h.cue  titania-20260630054337-kynteaq6.cue  titania-20260630054337-sepoqbta.cue  titania-20260630054337-sfplbyzi.cue
.cargo/: config.toml
.config/: source-length-exceptions.txt
.evidence/: pr-1-d1-d6-defects.md  stage3-deferred-filed-plan.md  stage3-typed-error-inventory.md  stage5-holzman-7x-audit.md  stage6-final-closure.md  titania-dogfood-audit.md
.evidence/kani-list/: workspace.json
.evidence/verus/: summary.txt
.moon/: project.yml  toolchains.yml  workspace.yml
.moon/tasks/: all.yml
.test-tmp/: zero.sh
contracts/: proof_obligations.yaml
crates/titania-core/: Cargo.toml
crates/titania-core/src/: digest.rs  discover.rs  error.rs  kani.rs  lib.rs  receipt.rs  rule_id.rs  target_project.rs  text_range.rs  workspace_path.rs
crates/titania-core/src/receipt/: digests.rs  lane_name.rs  schema.rs  serde_support.rs  target_root.rs
crates/titania-core/tests/: bdd.rs  json_roundtrip.rs  path_range_unit_tests.rs  properties.proptest-regressions  properties.rs  receipt_invariants.rs  receipt_public_api.rs  target_project_public_api.rs  tn_03d_acceptance.rs  tn_03d_deser_rejection.rs  tn_03d_e2e.rs  tn_03d_properties.rs  tn_03d_serde_roundtrip.rs  tn_03d_unit.rs  unit_tests.rs
crates/titania-lanes/: Cargo.toml
crates/titania-lanes/rules/: architecture.yml  bypass.yml  functional.yml
crates/titania-lanes/src/: ast_grep_catalog.rs  command.rs  helpers.rs  lib.rs  source_line.rs  walk.rs
crates/titania-lanes/src/command/: output.rs  process.rs  reader.rs
crates/titania-lanes/tests/: bdd_target_project.rs  command_public_api.rs  guard_api_regressions.rs  kani_list_public_api.rs  run_cargo_public_api.rs  rust_verification_gauntlet_target.rs  scanner_target_project.rs  toolchain_config.rs  verify_verus_public_api.rs
crates/xtask-bin/: Cargo.toml
crates/xtask-bin/src/: main.rs
crates/xtask-bypass/: Cargo.toml
crates/xtask-core/: Cargo.toml
crates/xtask-core/src/: location.rs
crates/xtask-lanes/: Cargo.toml
crates/xtask-lanes/src/: check.rs  clippy.rs  fmt.rs  gate.rs  lib.rs  panic_scan.rs  process.rs
crates/xtask-policy/: Cargo.toml
docs/: assurance-compiler-prd.md  cli-redesign.md  rule-engine.md
scripts/: hot-cold-forbidden-apis.allow  hotpath-scan.allow  ignored-fallible-results.allow
src/rules/: mod.rs
supply-chain/: config.toml
verification/verus/: formal_setup_smoke.rs  receipt_schema.rs
