[workspace]
resolver = "2"
members = [
    "crates/xtask-bin",
    "crates/xtask-core",
    "crates/xtask-policy",
    "crates/xtask-lanes",
    "crates/xtask-bypass",
    "crates/xtask-output",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unused_results = "allow"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = { level = "allow", priority = 1 }
# restriction lints: specific ones denied, group warn (informational)
unwrap_or_default = "deny"
exit = "deny"
default_numeric_fallback = "deny"
missing_errors_doc = "deny"
# critical panic-surface lints: deny here, -F on command line for production
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
string_slice = "deny"
get_unwrap = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
let_underscore_must_use = "deny"
await_holding_lock = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
result_large_err = "warn"

[workspace.dependencies]
xtask-core = { path = "crates/xtask-core" }
xtask-policy = { path = "crates/xtask-policy" }
xtask-lanes = { path = "crates/xtask-lanes" }
xtask-bypass = { path = "crates/xtask-bypass" }
xtask-output = { path = "crates/xtask-output" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
toml = "0.9"
