[package]
name = "xtask-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
xtask-core = { workspace = true }
xtask-policy = { workspace = true }
xtask-lanes = { workspace = true }
xtask-bypass = { workspace = true }
xtask-output = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
